--- a/src/polls/templates/polls/index.html
+++ b/src/polls/templates/polls/index.html
@@ -1,13 +1,25 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html>
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Polls</title>
+	<link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
 </head>
 <body>
 	<div>
-		<h1>Hello, this is my polls app</h1>
+		{% if latest_question_list %}
+		<h1>Latest Questions:</h1>
+	    <ul>
+	    {% for question in latest_question_list %}
+	        <li><a href="{% url 'detail' question.id %}">{{ question.question_text }}</a></li>
+	    {% endfor %}
+	    </ul>
+		{% else %}
+		<p>No polls are available.</p>
+		{% endif %}
 	</div>
 </body>
 </html>
